--- a/backlinks/2026-02-25.md
+++ b/backlinks/2026-02-25.md
@@ -40,3 +40,5 @@
 | Hashnode | [Zyxel's Critical RCE Flaw: Cybersecurity Alert for](https://deepseax.hashnode.dev/zyxel-s-critical-rce-flaw-cybersecurity-alert-for-over-a-dozen-routers) | dofollow | Auto-SEO |
 | Dev.to | [Zyxel Routers Vulnerable to Critical RCE Flaw: Imm](https://dev.to/deepseax/zyxel-routers-vulnerable-to-critical-rce-flaw-immediate-action-required-4n4j) | dofollow | Auto-SEO |
 | Hashnode | [Zyxel Routers Vulnerable to Critical RCE Flaw: Imm](https://deepseax.hashnode.dev/zyxel-routers-vulnerable-to-critical-rce-flaw-immediate-action-required) | dofollow | Auto-SEO |
+| Dev.to | [Salt Typhoon APT Targets Telecoms with GhostSpider](https://dev.to/deepseax/salt-typhoon-apt-targets-telecoms-with-ghostspider-how-to-defend-kje) | dofollow | Auto-SEO |
+| Hashnode | [Salt Typhoon APT Targets Telecoms with GhostSpider](https://deepseax.hashnode.dev/salt-typhoon-apt-targets-telecoms-with-ghostspider-how-to-defend) | dofollow | Auto-SEO |
