seo-auto: Combating Identity Risks in the Age of AI with Sen

--- a/backlinks/2026-02-25.md
+++ b/backlinks/2026-02-25.md
@@ -44,3 +44,5 @@
 | Hashnode | [Salt Typhoon APT Targets Telecoms with GhostSpider](https://deepseax.hashnode.dev/salt-typhoon-apt-targets-telecoms-with-ghostspider-how-to-defend) | dofollow | Auto-SEO |
 | Dev.to | [Diving into OpenClaw: A Deep Dive into Hype and Cy](https://dev.to/deepseax/diving-into-openclaw-a-deep-dive-into-hype-and-cyber-risks-eic) | dofollow | Auto-SEO |
 | Hashnode | [Diving into OpenClaw: A Deep Dive into Hype and Cy](https://deepseax.hashnode.dev/diving-into-openclaw-a-deep-dive-into-hype-and-cyber-risks) | dofollow | Auto-SEO |
+| Dev.to | [Combating Identity Risks in the Age of AI with Sen](https://dev.to/deepseax/combating-identity-risks-in-the-age-of-ai-with-sentinelone-singularity-oel) | dofollow | Auto-SEO |
+| Hashnode | [Combating Identity Risks in the Age of AI with Sen](https://deepseax.hashnode.dev/combating-identity-risks-in-the-age-of-ai-with-sentinelone-singularity) | dofollow | Auto-SEO |
