seo-auto: AI-Accelerated Cyberattacks: 44% Surge in App Expl

--- a/backlinks/2026-02-25.md
+++ b/backlinks/2026-02-25.md
@@ -46,3 +46,5 @@
 | Hashnode | [Diving into OpenClaw: A Deep Dive into Hype and Cy](https://deepseax.hashnode.dev/diving-into-openclaw-a-deep-dive-into-hype-and-cyber-risks) | dofollow | Auto-SEO |
 | Dev.to | [Combating Identity Risks in the Age of AI with Sen](https://dev.to/deepseax/combating-identity-risks-in-the-age-of-ai-with-sentinelone-singularity-oel) | dofollow | Auto-SEO |
 | Hashnode | [Combating Identity Risks in the Age of AI with Sen](https://deepseax.hashnode.dev/combating-identity-risks-in-the-age-of-ai-with-sentinelone-singularity) | dofollow | Auto-SEO |
+| Dev.to | [AI-Accelerated Cyberattacks: 44% Surge in App Expl](https://dev.to/deepseax/ai-accelerated-cyberattacks-44-surge-in-app-exploits-7h5) | dofollow | Auto-SEO |
+| Hashnode | [AI-Accelerated Cyberattacks: 44% Surge in App Expl](https://deepseax.hashnode.dev/ai-accelerated-cyberattacks-44-surge-in-app-exploits) | dofollow | Auto-SEO |
