--- a/backlinks/2026-02-25.md
+++ b/backlinks/2026-02-25.md
@@ -50,3 +50,5 @@
 | Hashnode | [AI-Accelerated Cyberattacks: 44% Surge in App Expl](https://deepseax.hashnode.dev/ai-accelerated-cyberattacks-44-surge-in-app-exploits) | dofollow | Auto-SEO |
 | Dev.to | [AI-Powered Cyber Risks: 44% Surge in App Exploits](https://dev.to/deepseax/ai-powered-cyber-risks-44-surge-in-app-exploits-4hbb) | dofollow | Auto-SEO |
 | Hashnode | [AI-Powered Cyber Risks: 44% Surge in App Exploits](https://deepseax.hashnode.dev/ai-powered-cyber-risks-44-surge-in-app-exploits) | dofollow | Auto-SEO |
+| Dev.to | [SonicWall Breach 2026: Ransomware Attack and Backu](https://dev.to/deepseax/sonicwall-breach-2026-ransomware-attack-and-backup-misconfiguration-e25) | dofollow | Auto-SEO |
+| Hashnode | [SonicWall Breach 2026: Ransomware Attack and Backu](https://deepseax.hashnode.dev/sonicwall-breach-2026-ransomware-attack-and-backup-misconfiguration) | dofollow | Auto-SEO |
