--- a/backlinks/2026-02-25.md
+++ b/backlinks/2026-02-25.md
@@ -56,3 +56,5 @@
 | Hashnode | [CVE-2026-20127: Active Exploitation of Cisco Catal](https://deepseax.hashnode.dev/cve-2026-20127-active-exploitation-of-cisco-catalyst-sd-wan-by-uat-8616-in-2026) | dofollow | Auto-SEO |
 | Dev.to | [Claude Code Flaws Allow Remote Code Execution and ](https://dev.to/deepseax/claude-code-flaws-allow-remote-code-execution-and-api-key-exfiltration-in-2026-4b01) | dofollow | Auto-SEO |
 | Hashnode | [Claude Code Flaws Allow Remote Code Execution and ](https://deepseax.hashnode.dev/claude-code-flaws-allow-remote-code-execution-and-api-key-exfiltration-in-2026) | dofollow | Auto-SEO |
+| Dev.to | [RAMP Forum Seizure Impacts Ransomware in 2026](https://dev.to/deepseax/ramp-forum-seizure-impacts-ransomware-in-2026-4f1h) | dofollow | Auto-SEO |
+| Hashnode | [RAMP Forum Seizure Impacts Ransomware in 2026](https://deepseax.hashnode.dev/ramp-forum-seizure-impacts-ransomware-in-2026) | dofollow | Auto-SEO |
