--- a/backlinks/2026-02-26.md
+++ b/backlinks/2026-02-26.md
@@ -16,3 +16,5 @@
 | Hashnode | [Rethinking the ‘Human Layer’ in Security for 2026:](https://deepseax.hashnode.dev/rethinking-the-human-layer-in-security-for-2026-employee-training-vs-security-te) | dofollow | Auto-SEO |
 | Dev.to | [Ransomware Payment Rate Drops to Record Low in 202](https://dev.to/deepseax/ransomware-payment-rate-drops-to-record-low-in-2026-amid-surge-in-attacks-1fdj) | dofollow | Auto-SEO |
 | Hashnode | [Ransomware Payment Rate Drops to Record Low in 202](https://deepseax.hashnode.dev/ransomware-payment-rate-drops-to-record-low-in-2026-amid-surge-in-attacks) | dofollow | Auto-SEO |
+| Dev.to | [Olympique Marseille Cyberattack in 2026: Threat An](https://dev.to/deepseax/olympique-marseille-cyberattack-in-2026-threat-analysis-and-practical-defense-1c08) | dofollow | Auto-SEO |
+| Hashnode | [Olympique Marseille Cyberattack in 2026: Threat An](https://deepseax.hashnode.dev/olympique-marseille-cyberattack-in-2026-threat-analysis-and-practical-defense) | dofollow | Auto-SEO |
